----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        - Open the preferences or milestones when you click on the icon for the reactor or quality warning messages.
        - Implemented Auto Save.
        - (SA) Research recipes correctly consume quality science packs, and the UI explains this.
    Fixes:
        - Fix export of blueprint chests from shopping list (broken in factorio >= 2.0.35)
        - (regression) The total sushi-input/-output items display belt counts again, and allow them as input.
        - (regression) Spent fuel amounts could be displayed with wrong value.
----------------------------------------------------------------------------------------------------------------------
Version: 2.10.0
Date: March 5th 2025
    Features:
        - (SA) Calculate the required heating and show it in tooltips and the shopping list.
        - Update Yafc to support Factorio 2.0.38
----------------------------------------------------------------------------------------------------------------------
Version: 2.9.0
Date: February 24th 2025
    Features:
        - Add related recipes to the Link Summary screen.
    Fixes:
        - (regression) Legacy summary pages could not be saved or loaded.
        - Quality bonuses/penalties in beacons were not handled correctly.
----------------------------------------------------------------------------------------------------------------------
Version: 2.8.1
Date: February 20th 2025
    Fixes:
        - (regression) Links for recipes with fluid outputs were not handled correctly.
----------------------------------------------------------------------------------------------------------------------
Version: 2.8.0
Date: February 19th 2025
    Features:
        - Detect lightning rods/collectors as electricity sources, and estimate the required accumulator count.
        - Added button to remove link from link summary screen.