@@ -9,9 +9,13 @@ namespace Yafc;
 public class SelectMultiObjectPanel : SelectObjectPanel<IEnumerable<FactorioObject>> {
     private readonly HashSet<FactorioObject> results = [];
     private readonly Predicate<FactorioObject> checkMark;
+    private readonly Predicate<FactorioObject> yellowMark;
     private bool allowAutoClose = true;
 
-    private SelectMultiObjectPanel(Predicate<FactorioObject> checkMark) => this.checkMark = checkMark;
+    private SelectMultiObjectPanel(Predicate<FactorioObject> checkMark, Predicate<FactorioObject> yellowMark) {
+        this.checkMark = checkMark;
+        this.yellowMark = yellowMark;
+    }
 
     /// <summary>
     /// Opens a <see cref="SelectMultiObjectPanel"/> to allow the user to select one or more <see cref="FactorioObject"/>s.
@@ -20,8 +24,8 @@ public class SelectMultiObjectPanel : SelectObjectPanel<IEnumerable<FactorioObje
     /// <param name="header">The string that describes to the user why they're selecting these items.</param>
     /// <param name="selectItem">An action to be called for each selected item when the panel is closed.</param>
     /// <param name="ordering">An optional ordering specifying how to sort the displayed items. If <see langword="null"/>, defaults to <see cref="DataUtils.DefaultOrdering"/>.</param>
-    public static void Select<T>(IEnumerable<T> list, string? header, Action<T> selectItem, IComparer<T>? ordering = null, Predicate<T>? checkMark = null) where T : FactorioObject {
-        SelectMultiObjectPanel panel = new(o => checkMark?.Invoke((T)o) ?? false); // This casting is messy, but pushing T all the way around the call stack and type tree was messier.
+    public static void Select<T>(IEnumerable<T> list, string? header, Action<T> selectItem, IComparer<T>? ordering = null, Predicate<T>? checkMark = null, Predicate<T>? yellowMark = null) where T : FactorioObject {
+        SelectMultiObjectPanel panel = new(o => checkMark?.Invoke((T)o) ?? false, o => yellowMark?.Invoke((T)o) ?? false); // This casting is messy, but pushing T all the way around the call stack and type tree was messier.
         panel.Select(list, header, selectItem!, ordering, (objs, mappedAction) => { // null-forgiving: selectItem will not be called with null, because allowNone is false.
             foreach (var obj in objs!) { // null-forgiving: mapResult will not be called with null, because allowNone is false.
                 mappedAction(obj);
@@ -37,9 +41,9 @@ public class SelectMultiObjectPanel : SelectObjectPanel<IEnumerable<FactorioObje
     /// <param name="selectItem">An action to be called for each selected item when the panel is closed.</param>
     /// <param name="ordering">An optional ordering specifying how to sort the displayed items. If <see langword="null"/>, defaults to <see cref="DataUtils.DefaultOrdering"/>.</param>
     public static void SelectWithQuality<T>(IEnumerable<T> list, string header, Action<ObjectWithQuality<T>> selectItem, Quality currentQuality,
-        IComparer<T>? ordering = null, Predicate<T>? checkMark = null) where T : FactorioObject {
+        IComparer<T>? ordering = null, Predicate<T>? checkMark = null, Predicate<T>? yellowMark = null) where T : FactorioObject {
 
-        SelectMultiObjectPanel panel = new(o => checkMark?.Invoke((T)o) ?? false); // This casting is messy, but pushing T all the way around the call stack and type tree was messier.
+        SelectMultiObjectPanel panel = new(o => checkMark?.Invoke((T)o) ?? false, o => yellowMark?.Invoke((T)o) ?? false); // This casting is messy, but pushing T all the way around the call stack and type tree was messier.
         panel.SelectWithQuality(list, header, selectItem!, ordering, (objs, mappedAction) => { // null-forgiving: selectItem will not be called with null, because allowNone is false.
             foreach (var obj in objs!) { // null-forgiving: mapResult will not be called with null, because allowNone is false.
                 mappedAction(obj);
@@ -53,6 +57,9 @@ public class SelectMultiObjectPanel : SelectObjectPanel<IEnumerable<FactorioObje
 
         if (checkMark(element)) {
             gui.DrawIcon(Rect.SideRect(gui.lastRect.TopLeft + new Vector2(1, 0), gui.lastRect.BottomRight - new Vector2(0, 1)), Icon.Check, SchemeColor.Green);
+        }
+        else if (yellowMark(element)) {
+            gui.DrawIcon(Rect.SideRect(gui.lastRect.TopLeft + new Vector2(1, 0), gui.lastRect.BottomRight - new Vector2(0, 1)), Icon.Check, SchemeColor.TagColorYellowText);
         }
 
         if (click == Click.Left) {
