@@ -21,6 +21,7 @@ Date:
         - Open the preferences or milestones when you click on the icon for the reactor or quality warning messages.
         - Implemented Auto Save.
         - (SA) Research recipes correctly consume quality science packs, and the UI explains this.
+        - Added marker to recipes already used on the current page.
     Fixes:
         - Fix export of blueprint chests from shopping list (broken in factorio >= 2.0.35)
         - (regression) The total sushi-input/-output items display belt counts again, and allow them as input.
